desarrollo de secciones. tarea unidad 4

--- a/sedes.html
+++ b/sedes.html
@@ -7,7 +7,7 @@
     <title>BAFitness Nosotros</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="BAFitness.css">
 </head>
@@ -26,8 +26,18 @@
               <li class="nav-item">
                 <a class="nav-link" href="servicios.html">Nuestros Servicios</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sedes.html">Nuestras Sedes</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="sedes.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Nuestras Sedes
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="sedes.html">C.A.B.A.</a></li>                  
+                  <li><a class="dropdown-item" href="sedes.html">A.M.B.A. Sur</a></li>
+                  <li><a class="dropdown-item" href="sedes.html">A.M.B.A. Oeste</a></li>
+                  <li><a class="dropdown-item" href="sedes.html">A.M.B.A. Norte</a></li>
+                  <li><a class="dropdown-item" href="sedes.html">Interior del País</a></li>
+                </ul>
+              </li>                
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled">Volver al Inicio</a>
@@ -39,3 +49,23 @@
       <section class="hero">
         <div class="contenido-sedes">
           <div id="home" class="row align-items-center hero">
+            <div id="C.A.B.A." class="row py-4">
+              <div class="col-md-4 offset-md-2">
+                <div class="mapa">
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.5863191404255!2d-58.404857489503065!3d-34.76601226597291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb70a88551e3b%3A0x76b583ede9bd9567!2sLas%20Lomitas%20Street!5e0!3m2!1ses-419!2sar!4v1685063041642!5m2!1ses-419!2sar"></iframe>
+                </div>
+              </div>
+            </div>
+                   <footer>
+              <p>Desarrollo: María de las Mercedes Chao Stadelman 2023 
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-registered" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fd0061" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                <circle cx="12" cy="12" r="9" />
+                <path d="M9 16v-8h4a2 2 0 0 1 0 4h-4m3 0l3 4" />
+                </svg>
+            </p>
+            </footer>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        
+      </body>
+      </html>
