--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <button type="button" data-bs-target="#demo" data-bs-slide-to="6"></button>
           <button type="button" data-bs-target="#demo" data-bs-slide-to="7"></button>
           <button type="button" data-bs-target="#demo" data-bs-slide-to="8"></button>
+          <button type="button" data-bs-target="#demo" data-bs-slide-to="9"></button>
 
       </div>
           <div class="carousel-inner"> 
@@ -109,10 +110,16 @@
                   </div>
                 </div>
             <div class="carousel-item">
-            <img src="img/boxing.jpg" alt="boxeo" class="d-block">
+            <img src="img/indumentaria.jpg" alt="indumentaria" class="d-block">
                 <div class="carousel-caption d-none d-md-block">
-                  <h1>BAFitness: ¡ENTRENAMIENTO SIN EXCUSAS!</h1>
+                  <h1>INDUMENTARIA Y ACCESORIOS</h1>
                 </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="img/boxing.jpg" alt="boxeo" class="d-block">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h1>BAFitness: ¡ENTRENAMIENTO SIN EXCUSAS!</h1>
+                      </div>
                 </div>
             </div>
         </div>
